--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </form>
   </dialog>
 
-  <div id="overlay-produk" class="overlay">
+  <!-- <div id="overlay-produk" class="overlay">
     <i class="size-32 close" data-feather="x-circle"></i>
     <div class="overlay-content">
       <section class="details">
@@ -330,8 +330,121 @@
       </section>
     </div>
 
-  </div>
+  </div> -->
 
+  <div id="overlay-produk" class="overlay">
+    <i class="size-32 close" data-feather="x-circle"></i>
+    <div class="overlay-content">
+
+      <section class="details swiper">
+        <div>
+          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiperGalery">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="img/7.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/8.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/9.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/10.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/11.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/12.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/13.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/14.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/15.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/16.webp">
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination swiper-pagination-galery"></div>
+
+          </div>
+          <div thumbsSlider="" class="swiper mySwiperThumbs">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="img/7.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/8.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/9.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/10.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/11.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/12.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/13.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/14.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/15.webp">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/16.webp">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="product-content">
+        <div class="product-content font-poppins">
+          <p class="product-subtitle">Galeri > Pakaian Wanita > Gamis</p>
+          <h1 class="h1 product-title">Fall Limited Edition Sneakers</h1>
+          <p class="product-text">
+            These low-profile sneakers are your perfect casual wear companion. Featuring a
+            durable rubber outer sole, they’ll withstand everything the weather can offer.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga mollitia aspernatur nesciunt ex maiores,
+            eligendi magnam quibusdam rem corporis dolor architecto nobis illum voluptas nam consequatur illo atque,
+            cupiditate assumenda!
+          </p>
+          <div class="btn-group">
+            <div class="wrapper">
+              <p class="product-subtitle">HARGA:</p>
+              <span class="price" data-total-price>Rp 150.000</span>
+              <p class="product-subtitle">DISKON:</p>
+              <span class="badge">10<i class="size-18" data-feather="percent"></i></span>
+            </div>
+            <div class="menu-list">
+              <div class="icon"><i class="size-32" data-feather="shopping-cart"></i>
+                <p>Tambah ke keranjang</p>
+              </div>
+              <div class="icon"><i class="size-32" data-feather="message-circle"></i>
+                <p>Order via WhatsApp</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </div>
+  </div>
 
   <div class="container">
     <nav class="menu fixed-top">
@@ -357,8 +470,8 @@
       </div>
     </nav>
 
-    <header class="header">
-      <div class="hero swiper swiper1">
+    <header class="header swiper">
+      <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="hero swiper swiper1">
         <div class="hero-logo">
           <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
         </div>
@@ -378,9 +491,10 @@
           <div class="swiper-slide">
             <img src="img/3.webp" alt="">
           </div>
+          <div class="swiper-pagination swiper-pagination1"></div>
+
         </div>
-        <div class="swiper-pagination swiper-pagination1"></div>
-       
+
       </div>
 
 
@@ -398,63 +512,67 @@
 
     <main>
       <div class="title-section">Brands</div>
-      <section class="brands swiper swiper2">
-        <div class="swiper-wrapper">
-          <div class="brand swiper-slide">
-            <img src="img/brand-umama-scarf.jpg" alt="">
-            <p>Umama Scarf</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-malica.jpg" alt="">
-            <p>Malica</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-aje-zas.jpg" alt="">
-            <p>Aje Zas</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-umama-scarf.jpg" alt="">
-            <p>Umama Scarf</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-malica.jpg" alt="">
-            <p>Malica</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-aje-zas.jpg" alt="">
-            <p>Aje Zas</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-umama-scarf.jpg" alt="">
-            <p>Umama Scarf</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-malica.jpg" alt="">
-            <p>Malica</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-aje-zas.jpg" alt="">
-            <p>Aje Zas</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-umama-scarf.jpg" alt="">
-            <p>Umama Scarf</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-malica.jpg" alt="">
-            <p>Malica</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-aje-zas.jpg" alt="">
-            <p>Aje Zas</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-umama-scarf.jpg" alt="">
-            <p>Umama Scarf</p>
-          </div>
-          <div class="brand swiper-slide">
-            <img src="img/brand-malica.jpg" alt="">
-            <p>Malica</p>
+      <section class="brands swiper">
+        <div>
+          <div class="swiper swiper2">
+            <div class="swiper-wrapper">
+              <div class="brand swiper-slide">
+                <img src="img/brand-umama-scarf.jpg" alt="">
+                <p>Umama Scarf</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-malica.jpg" alt="">
+                <p>Malica</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-aje-zas.jpg" alt="">
+                <p>Aje Zas</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-umama-scarf.jpg" alt="">
+                <p>Umama Scarf</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-malica.jpg" alt="">
+                <p>Malica</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-aje-zas.jpg" alt="">
+                <p>Aje Zas</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-umama-scarf.jpg" alt="">
+                <p>Umama Scarf</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-malica.jpg" alt="">
+                <p>Malica</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-aje-zas.jpg" alt="">
+                <p>Aje Zas</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-umama-scarf.jpg" alt="">
+                <p>Umama Scarf</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-malica.jpg" alt="">
+                <p>Malica</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-aje-zas.jpg" alt="">
+                <p>Aje Zas</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-umama-scarf.jpg" alt="">
+                <p>Umama Scarf</p>
+              </div>
+              <div class="brand swiper-slide">
+                <img src="img/brand-malica.jpg" alt="">
+                <p>Malica</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
